add Bootstrap for main gallery page styling

--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -23,10 +23,15 @@
             Tideline Gallery
         </title>
         <!-- Bootstrap -->
-        {# <link href="" rel="stylesheet" type="text/css"> #}
+        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <style type="text/css">
+            #main {
+                padding: 0px;
+            }
+        </style>
     </head>
     <body>
-        <div class="container-fluid">
+        <div id="main" class="container-fluid">
             <div class="jumbotron" id="gallery">
                 <div class="page-header">
                     <h1>
