--- a/plugins/blip/basics/less/CalendarContainer.less
+++ b/plugins/blip/basics/less/CalendarContainer.less
@@ -6,6 +6,33 @@
 	padding-top: @small-pad/4;
 }
 
+.Calendar-legend {
+	text-align: center;
+	margin: 0 -10px;
+	.Calendar-legend-series {
+		display: inline-block;
+		span {
+			font-weight: bold;
+			font-size: 12px;
+			vertical-align: text-top;
+			padding: 0 5px
+		}
+
+		svg {
+			display: inline-block;
+
+			circle {
+				fill: @fingerstick;
+
+				&.Fingerstick--manual {
+					fill: @day-color;
+					fill-opacity: 0.7;
+				}
+			}
+		}
+	}
+}
+
 .Calendar-container {
 	 margin-left: -15px;
    margin-right: -15px;
@@ -48,6 +75,11 @@
 
 			.WrapCount svg circle {
 				fill: @fingerstick;
+
+				&.Fingerstick--manual {
+					fill: @day-color;
+					fill-opacity: 0.7;
+				}
 			}
 		}
 
