Right align legend

--- a/plugins/blip/basics/less/CalendarContainer.less
+++ b/plugins/blip/basics/less/CalendarContainer.less
@@ -7,7 +7,7 @@
 }
 
 .Calendar-legend {
-	text-align: center;
+	text-align: right;
 	margin: 0 -10px;
 	.Calendar-legend-series {
 		display: inline-block;
