Generalize Legend and create the generic component, add configuration in state.js

--- a/plugins/blip/basics/less/CalendarContainer.less
+++ b/plugins/blip/basics/less/CalendarContainer.less
@@ -24,7 +24,7 @@
 			circle {
 				fill: @fingerstick;
 
-				&.Fingerstick--manual {
+				&.Dot-innerCircle {
 					fill: @day-color;
 					fill-opacity: 0.7;
 				}
@@ -85,7 +85,7 @@
 			.WrapCount svg circle {
 				fill: @fingerstick;
 
-				&.Fingerstick--manual {
+				&.Dot-innerCircle {
 					fill: @day-color;
 					fill-opacity: 0.7;
 				}
