--- a/plugins/blip/basics/less/misc/SummaryGroup.less
+++ b/plugins/blip/basics/less/misc/SummaryGroup.less
@@ -18,14 +18,19 @@
     height: 32px;
     background-color: @day-color;
 
+    &.SummaryGroup-info-tall {
+      padding-top: 20px;
+      height: 67px;
+    }
+
     .SummaryGroup-option-percentage, .SummaryGroup-option-count {
       float: right;
-      padding-right: 10px;
+      padding-right: 20px;
     }
 
     .SummaryGroup-option-percentage {
       font-size: 11px;
-      padding-right: 10px;
+      margin-left: -10px;
     }
 
     .SummaryGroup-option-count {
