added support for physical activity objects to be loaded by tideline and a visualization for physical activity data

--- a/css/tideline-tooltip.less
+++ b/css/tideline-tooltip.less
@@ -76,6 +76,10 @@
     &.messageTooltip {
       text-align: left;
     }
+    
+    &.physicalActivityTooltip {
+      text-align: left;
+    }
   }
 }
 
