--- a/css/tideline.less
+++ b/css/tideline.less
@@ -177,6 +177,15 @@ svg {
   }
 }
 
+// physical activity objects
+.d3-rect-physicalactivity, .d3-rect-timechange {
+  fill: white;
+  opacity: 0.5;
+  &.hidden {
+    display: none;
+  }
+}
+
 // carbs
 .d3-rect-carbs {
   fill: @carbs;
