Fix hover background on site changes

--- a/plugins/blip/basics/less/CalendarContainer.less
+++ b/plugins/blip/basics/less/CalendarContainer.less
@@ -90,7 +90,7 @@
 			}
 		}
 
-		.Calendar-day--reservoirChange {
+		.Calendar-day--reservoirChange, .Calendar-day--tubingPrime, .Calendar-day--cannulaPrime {
 			&.Calendar-day--HOVER {
 				background-color: @infusion-day-color;
 			}
@@ -101,7 +101,7 @@
 				.corner-dates();
 				font-weight: bold;
 			}
-			&.Calendar-day--reservoirChange {
+			&.Calendar-day--reservoirChange, &.Calendar-day--tubingPrime, &.Calendar-day--cannulaPrime,  {
 				color: @text;
 			}
 			.Calendar-day-text {
