--- a/plugins/blip/basics/less/sitechange/Selector.less
+++ b/plugins/blip/basics/less/sitechange/Selector.less
@@ -1,6 +1,11 @@
 .SiteChangeSelector {
   margin-bottom: 15px;
 
+  p {
+    margin-top: 0;
+    margin-left: 5px;
+  }
+
   .SiteChangeSelector-option {
     display: inline-block;
     margin-left: 10px;
