Update css classes for new section names

--- a/plugins/blip/basics/less/CalendarContainer.less
+++ b/plugins/blip/basics/less/CalendarContainer.less
@@ -75,7 +75,7 @@
       color: @calendar-label-color;
 		}
 
-		.Calendar-day--fingerstick {
+		.Calendar-day--fingersticks {
 			&.Calendar-day--HOVER {
 				background-color: @fingerstick;
 				.Calendar-weekday();
@@ -86,7 +86,7 @@
 			}
 		}
 
-		.Calendar-day--bolus {
+		.Calendar-day--boluses {
 			&.Calendar-day--HOVER {
 				background-color: @bolus;
 				.Calendar-weekday();
@@ -97,7 +97,7 @@
 			}
 		}
 
-		.Calendar-day--basal {
+		.Calendar-day--basals {
 			&.Calendar-day--HOVER {
 				background-color: @basal;
 				.Calendar-weekday();
