Finish wiring basics data into view

--- a/plugins/blip/basics/less/CalendarContainer.less
+++ b/plugins/blip/basics/less/CalendarContainer.less
@@ -108,7 +108,7 @@
 			}
 		}
 
-		.Calendar-day--reservoirChange, .Calendar-day--tubingPrime, .Calendar-day--cannulaPrime {
+		.Calendar-day--siteChanges {
 			&.Calendar-day--HOVER {
 				background-color: @infusion-day-color;
 			}
@@ -124,7 +124,7 @@
 				.corner-dates();
 				font-weight: bold;
 			}
-			&.Calendar-day--reservoirChange, &.Calendar-day--tubingPrime, &.Calendar-day--cannulaPrime,  {
+			&.Calendar-day--siteChanges{
 				color: @text;
 			}
 			.Calendar-day-text {
@@ -164,7 +164,7 @@
 			overflow-x: hidden;
 		}
 
-		.Calendar-day, {
+		.Calendar-day {
       background-color: @day-color;
 
 			.WrapCount {
