Fix some broken sitechange source scenarios

--- a/plugins/blip/basics/less/CalendarContainer.less
+++ b/plugins/blip/basics/less/CalendarContainer.less
@@ -108,7 +108,7 @@
 			}
 		}
 
-		.Calendar-day--siteChanges {
+    .Calendar-day--reservoirChange, .Calendar-day--tubingPrime, .Calendar-day--cannulaPrime {
 			&.Calendar-day--HOVER {
 				background-color: @infusion-day-color;
 			}
@@ -124,9 +124,11 @@
 				.corner-dates();
 				font-weight: bold;
 			}
-			&.Calendar-day--siteChanges{
+
+      &.Calendar-day--reservoirChange, &.Calendar-day--tubingPrime, &.Calendar-day--cannulaPrime {
 				color: @text;
-			}
+      }
+
 			.Calendar-day-text {
         align-self: center;
         flex-grow: 1;
