--- a/plugins/blip/basics/less/variables.less
+++ b/plugins/blip/basics/less/variables.less
@@ -13,7 +13,7 @@
 @left-column-background-color: #EEF5F9;
 
 @day-color: #eef5f9;
-@future-day-color: lighten(#eef5f9, 3%);
+@out-of-range-day-color: lighten(#eef5f9, 3%);
 
 @infusion-day-color: #fcd144;
 @infusion-line-color: lighten(@text, 10%);
