visualize automated boluses

--- a/css/tideline-colors.less
+++ b/css/tideline-colors.less
@@ -72,6 +72,7 @@
 @override: darken(@bolus, 35);
 @suspended: #FF8B7C;
 @bolus-ratio-label: #727375;
+@bolus-automated: lighten(@basal-automated, 25);
 
 // basal colors
 @basal: darken(@bolus, 25);
