--- a/css/tideline.less
+++ b/css/tideline.less
@@ -223,6 +223,10 @@ svg {
   &.d3-rect-bolus {
     fill: @bolus;
   }
+  &.d3-bolus-automated {
+    fill: @bolus-automated;
+    stroke: @bolus-automated;
+  }
   &.d3-rect-bolus-legend {
     .d3-rect-bolus;
     stroke: @bolus;
