[WEB-717] Show carb exchanges with distinct styling on daily view

--- a/css/tideline-colors.less
+++ b/css/tideline-colors.less
@@ -65,6 +65,8 @@
 // carbs color
 @carbs: #FFD382;
 @carbs-circle-fill: #ffd47c;
+@carb-exchanges: #FFB686;
+@carb-exchanges-circle-fill: #FFB686;
 
 // bolus color
 @bolus: #79D0F2;
