--- a/css/tideline.less
+++ b/css/tideline.less
@@ -218,6 +218,25 @@ svg {
   text-anchor: middle;
 }
 
+// carb exchanges
+.d3-rect-carb-exchanges {
+  fill: @carb-exchanges;
+}
+.d3-rect-carb-exchanges-legend {
+  .d3-rect-carb-exchanges;
+  stroke: @carb-exchanges;
+  stroke-width: 1.5;
+}
+.d3-circle-carb-exchanges {
+  fill: @carb-exchanges;
+}
+.d3-carb-exchanges-text {
+  fill: @text;
+  font-size: @font-size-small;
+  dominant-baseline: central;
+  text-anchor: middle;
+}
+
 // boluses
 .d3-bolus {
   &.d3-rect-bolus {
