[WEB-775] Render control IQ override mode markers

--- a/css/tideline-colors.less
+++ b/css/tideline-colors.less
@@ -74,7 +74,7 @@
 @override: darken(@bolus, 35);
 @suspended: #FF8B7C;
 @bolus-ratio-label: #727375;
-@bolus-automated: lighten(@basal-automated, 25);
+@bolus-automated: #00D3E6;
 
 // basal colors
 @basal: darken(@bolus, 25);
@@ -98,6 +98,10 @@
 @settings-label-fill-bg-target: #5CB947;
 // this is inherited from some other text color setting in blip
 @settings-table-head-text: @text;
+
+// settingsOverrides
+@settings-override-sleep: #0079C0;
+@settings-override-physicalActivity: #00B2C3;
 
 // tooltips
 @title-background: #EAEAEE;
