[WEB-775] Add tooltip on hover to settings override markers

--- a/css/tideline.less
+++ b/css/tideline.less
@@ -416,6 +416,11 @@ svg {
   }
 }
 
+.d3-marker-extension-hover-target {
+  stroke-width: 0;
+  fill: transparent;
+}
+
 .d3-basal-marker-group {
   fill: @basal;
   stroke: @basal;
