[WEB-775] Add automated bolus and basal to legends

--- a/css/tideline.less
+++ b/css/tideline.less
@@ -251,6 +251,10 @@ svg {
     stroke: @bolus;
     stroke-width: 1.5;
   }
+  &.d3-rect-bolus-automated-legend {
+    .d3-bolus-automated;
+    stroke-width: 1.5;
+  }
   &.d3-path-bolus {
     stroke: @bolus;
     fill: none;
@@ -378,12 +382,21 @@ svg {
 
 // basal
 .d3-basal {
+  &.d3-rect-basal-automated {
+    fill: @basal-automated;
+    stroke: @basal-automated;
+    stroke-opacity: 0.01;
+    &.d3-legend {
+      fill-opacity: 0.6;
+      stroke-width: 1.5;
+    }
+  }
   &.d3-rect-basal {
     fill: @basal;
     stroke: @basal;
     stroke-opacity: 0.01;
     &.d3-legend {
-      fill-opacity: 0.3;
+      fill-opacity: 0.6;
       stroke-width: 1.5;
     }
     &.d3-basal-automated {
