--- a/css/tideline-colors.less
+++ b/css/tideline-colors.less
@@ -63,25 +63,25 @@
 @fingerstick: #6480FB;
 
 // carbs color
-@carbs: #FFD382;
-@carbs-circle-fill: #ffd47c;
+@carbs: #F8D48E;
+@carbs-circle-fill: #F8D48E;
 @carb-exchanges: #FFB686;
 @carb-exchanges-circle-fill: #FFB686;
 
 // bolus color
-@bolus: #79D0F2;
+@bolus: #7CD0F0;
 @undelivered: #BCECFA;
 @override: darken(@bolus, 35);
 @suspended: #FF8B7C;
 @bolus-ratio-label: #727375;
-@bolus-automated: #00D3E6;
+@bolus-automated: #00B2C3;
 
 // basal colors
-@basal: darken(@bolus, 25);
+@basal: #19A0D7;
 @basal-ratio-label: @bolus-ratio-label;
 @automated-ratio-label: @bolus-ratio-label;
 @manual-ratio-label: @bolus-ratio-label;
-@basal-automated: #00D3E6;
+@basal-automated: #00B2C3;
 
 // basal tabular colors
 @cell-dividers: #E6E6E5;
@@ -100,8 +100,8 @@
 @settings-table-head-text: @text;
 
 // settingsOverrides
-@settings-override-sleep: #0079C0;
-@settings-override-physicalActivity: #00B2C3;
+@settings-override-sleep: #4457D9;
+@settings-override-physicalActivity: #758CFF;
 
 // tooltips
 @title-background: #EAEAEE;
