[WEB-1457] Small padding tweak

--- a/plugins/blip/basics/less/DashboardSection.less
+++ b/plugins/blip/basics/less/DashboardSection.less
@@ -77,3 +77,7 @@
     padding: 0px 0px 10px 10px;
   }
 }
+
+.DashboardSection:nth-child(4) .DashboardSection-container .DashboardSection-content {
+  padding-bottom: 0px;
+}
