--- a/plugins/blip/basics/less/sitechange/Change.less
+++ b/plugins/blip/basics/less/sitechange/Change.less
@@ -84,6 +84,10 @@
     background-image: url(../../components/sitechange/sitechange_omnipod.png);
   }
 
+  &.Change--loop-tubing .Change-line-stop {
+    background-image: url(../../components/sitechange/sitechange-loop-tubing.png);
+  }
+
   .Change-line-mark {
     top: calc(40% - (@infusion-line-mark-size / 2) + (@infusion-line-height / 2));
     border-radius: (@infusion-line-mark-size / 2);
