Add preprandial preset styling

--- a/css/tideline-colors.less
+++ b/css/tideline-colors.less
@@ -102,6 +102,7 @@
 // settingsOverrides
 @settings-override-sleep: #4457D9;
 @settings-override-physicalActivity: #758CFF;
+@settings-override-preprandial: #4457D9;
 
 // tooltips
 @title-background: #EAEAEE;
