--- a/css/tideline.less
+++ b/css/tideline.less
@@ -454,6 +454,11 @@ svg {
     stroke: @settings-override-physicalActivity;
   }
 
+  &[class*="d3-basal-marker-group-override-preprandial-"] {
+    fill: @settings-override-preprandial;
+    stroke: @settings-override-preprandial;
+  }
+
   .d3-marker-extension-line {
     stroke-width: 1.5;
     stroke-linecap: round;
