Add Twiist site changes

--- a/plugins/blip/basics/less/sitechange/Change.less
+++ b/plugins/blip/basics/less/sitechange/Change.less
@@ -85,7 +85,11 @@
   }
 
   &.Change--loop-tubing .Change-line-stop {
-    background-image: url(../../components/sitechange/sitechange-loop-tubing.png);
+    background-image: url(../../components/sitechange/sitechange_loop_tubing.png);
+  }
+
+  &.Change--twiist-cassette .Change-line-stop {
+    background-image: url(../../components/sitechange/sitechange_twiist_cassette.svg);
   }
 
   .Change-line-mark {
